--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: elixir
 elixir:
-  - 1.2.0
   - 1.3.0
+  - 1.4.0
+  - 1.5.0
 notifications:
   recipients:
     - spiros.gerokostas@gmail.com
@@ -10,6 +11,6 @@ otp_release:
 env:
   - MIX_ENV=test
 script:
-  - "mix do deps.get, compile"
+  - "mix do deps.get, compile, coveralls.travis"
 after_script:
   - "MIX_ENV=docs mix do deps.get, inch.report"
