--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,5 @@ env:
 script:
   - "mix do deps.get, compile, coveralls.travis"
 after_script:
+  - "mix deps.get --only docs"
   - "MIX_ENV=docs mix do deps.get, inch.report"
